Add Dockerfile, env config and Postgres support
Add a multi-stage Dockerfile and .dockerignore to containerize the backend (Maven build stage, copies built jar, creates data dir, exposes port and uses PORT env var). Add PostgreSQL runtime dependency to pom.xml. Update application.properties to allow datasource URL, username, password and admin password to be provided via environment variables (defaults remain an H2 file-based DB) and keep the H2 console enabled. .dockerignore excludes target, Maven wrappers, IDE files and logs.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=reality-filter
 server.port=8080
 
-# H2 in-memory database
-spring.datasource.url=jdbc:h2:file:./data/realityfilter;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Database - Defaults to H2 file locally, can be overridden by env vars (e.g. SPRING_DATASOURCE_URL)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:file:./data/realityfilter;DB_CLOSE_ON_EXIT=FALSE}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+
+# H2 Console - only enabled if not using Postgres (roughly)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Admin metrics password
-app.admin.password=123456
+app.admin.password=${APP_ADMIN_PASSWORD}
